--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,7 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useNx": true,
-  "useWorkspaces": true,
+  "useWorkspaces": false,
+  "packages": ["core/*", "commands/*", "models/*", "utils/*"],
   "version": "independent"
 }
