--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "root",
+  "name": "dorsey-cli",
   "private": true,
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
     "lerna": "^5.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
