--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,11 @@
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useNx": true,
   "useWorkspaces": false,
-  "packages": ["core/*", "commands/*", "models/*", "utils/*"],
+  "packages": [
+    "core/*",
+    "commands/*",
+    "models/*",
+    "utils/*"
+  ],
   "version": "1.0.0"
 }
