fix: 修复模板下载时异常问题

--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "@dorsey-cli/log": "^1.0.0",
     "@dorsey-cli/package": "^1.0.3",
-    "@dorsey-cli/utils": "^1.0.0"
+    "@dorsey-cli/utils": "^1.0.0",
+    "@dorsey-cli/request": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.8.0"
