--- a/core/exec/package.json
+++ b/core/exec/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dorsey-cli/exec",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "core exec",
   "author": "dorsey <406100205@qq.com>",
   "homepage": "https://github.com/Dorsey-CN/dorsey-cli#readme",
@@ -29,8 +29,8 @@
   "dependencies": {
     "@dorsey-cli/log": "^1.0.0",
     "@dorsey-cli/package": "^1.0.3",
-    "@dorsey-cli/utils": "^1.0.0",
-    "@dorsey-cli/request": "^1.0.0"
+    "@dorsey-cli/request": "^1.0.0",
+    "@dorsey-cli/utils": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.8.0"
